# clib-python38

./: .gitignore
example/pythondemo/: CMakeLists.txt
example/pythondemo/android/assets/: python3.8-pyo
example/pythondemo/android/src/ca/calm/pythondemo/: pythondemo.java
example/pythondemo/resource/python3.8-pyo/config-3.8/: Makefile  python-config.pyo
example/pythondemo/resource/python3.8-pyo/ctypes/test/: __init__.pyo  __main__.pyo  test_anon.pyo  test_array_in_pointer.pyo  test_arrays.pyo  test_as_parameter.pyo  test_bitfields.pyo  test_buffers.pyo  test_bytes.pyo  test_byteswap.pyo  test_callbacks.pyo  test_cast.pyo  test_cfuncs.pyo  test_checkretval.pyo  test_delattr.pyo  test_errno.pyo  test_find.pyo  test_frombuffer.pyo  test_funcptr.pyo  test_functions.pyo  test_incomplete.pyo  test_init.pyo  test_internals.pyo  test_keeprefs.pyo  test_libc.pyo  test_loading.pyo  test_macholib.pyo  test_memfunctions.pyo  test_numbers.pyo  test_objects.pyo  test_parameters.pyo  test_pep3118.pyo  test_pickling.pyo  test_pointers.pyo  test_prototypes.pyo  test_python_api.pyo  test_random_things.pyo  test_refcounts.pyo  test_repr.pyo  test_returnfuncptrs.pyo  (+13 more)
example/pythondemo/resource/python3.8-pyo/distutils/tests/: __init__.pyo  support.pyo  test_archive_util.pyo  test_bdist.pyo  test_bdist_dumb.pyo  test_bdist_msi.pyo  test_bdist_rpm.pyo  test_bdist_wininst.pyo  test_build.pyo  test_build_clib.pyo  test_build_ext.pyo  test_build_py.pyo  test_build_scripts.pyo  test_check.pyo  test_clean.pyo  test_cmd.pyo  test_config.pyo  test_config_cmd.pyo  test_core.pyo  test_cygwinccompiler.pyo  test_dep_util.pyo  test_dir_util.pyo  test_dist.pyo  test_extension.pyo  test_file_util.pyo  test_filelist.pyo  test_install.pyo  test_install_data.pyo  test_install_headers.pyo  test_install_lib.pyo  test_install_scripts.pyo  test_log.pyo  test_msvc9compiler.pyo  test_msvccompiler.pyo  test_register.pyo  test_sdist.pyo  test_spawn.pyo  test_sysconfig.pyo  test_text_file.pyo  test_unixccompiler.pyo  (+4 more)
example/pythondemo/resource/python3.8-pyo/idlelib/idle_test/: __init__.pyo  htest.pyo  mock_idle.pyo  mock_tk.pyo  template.pyo  test_autocomplete.pyo  test_autocomplete_w.pyo  test_autoexpand.pyo  test_browser.pyo  test_calltip.pyo  test_calltip_w.pyo  test_codecontext.pyo  test_colorizer.pyo  test_config.pyo  test_config_key.pyo  test_configdialog.pyo  test_debugger.pyo  test_debugger_r.pyo  test_debugobj.pyo  test_debugobj_r.pyo  test_delegator.pyo  test_editmenu.pyo  test_editor.pyo  test_filelist.pyo  test_format.pyo  test_grep.pyo  test_help.pyo  test_help_about.pyo  test_history.pyo  test_hyperparser.pyo  test_iomenu.pyo  test_macosx.pyo  test_mainmenu.pyo  test_multicall.pyo  test_outwin.pyo  test_parenmatch.pyo  test_pathbrowser.pyo  test_percolator.pyo  test_pyparse.pyo  test_pyshell.pyo  (+23 more)
example/pythondemo/resource/python3.8-pyo/sqlite3/test/: backup.pyo  dbapi.pyo  dump.pyo  factory.pyo  hooks.pyo  regression.pyo  transactions.pyo  types.pyo  userfunctions.pyo
example/pythondemo/resource/python3.8-pyo/tkinter/test/: runtktests.pyo  support.pyo  widget_tests.pyo
example/pythondemo/resource/python3.8-pyo/tkinter/test/test_tkinter/: test_colorchooser.pyo  test_font.pyo  test_geometry_managers.pyo  test_images.pyo  test_loadtk.pyo  test_misc.pyo  test_simpledialog.pyo  test_text.pyo  test_variables.pyo  test_widgets.pyo
example/pythondemo/resource/python3.8-pyo/tkinter/test/test_ttk/: test_extensions.pyo  test_functions.pyo  test_style.pyo  test_widgets.pyo
example/pythondemo/resource/python3.8-pyo/unittest/test/: __init__.pyo  __main__.pyo  _test_warnings.pyo  dummy.pyo  support.pyo  test_assertions.pyo  test_async_case.pyo  test_break.pyo  test_case.pyo  test_discovery.pyo  test_functiontestcase.pyo  test_loader.pyo  test_program.pyo  test_result.pyo  test_runner.pyo  test_setups.pyo  test_skipping.pyo  test_suite.pyo
example/pythondemo/resource/python3.8-pyo/unittest/test/testmock/: __init__.pyo  __main__.pyo  support.pyo  testasync.pyo  testcallable.pyo  testhelpers.pyo  testmagicmethods.pyo  testmock.pyo  testpatch.pyo  testsealable.pyo  testsentinel.pyo  testwith.pyo
example/pythondemo/script/: change_android_settings.py
example/pythondemo/src/: main.cpp
output/include/android/python3.8/: pyconfig.h
output/include/linux/python3.8/: pyconfig.h
output/lib/android/python3.8/: freeze-pyo.py
output/lib/linux64/python3.8/: libpython3.8.so.1.0  python3.8
output/sysroot/lib/: libffi.la  libgdbm.la  libgdbm_compat.la  liblzma.la  libsqlite3.la  libuuid.la
output/sysroot/lib/pkgconfig/: libffi.pc  liblzma.pc  sqlite3.pc
